version 0.61.3
22/10/2018
   - Updated jetty, spring and hibernate versions (margaretha)

version 0.61.2
12/09/2018
   - Removed log4j loader and old OAuth2 implementation codes(margaretha)
13/09/2018
   - Updated KoralNode and enforced order of RewriteTask (margaretha)
14/09/2018
   - Added a status code for nonunique results (margaretha)
    
version 0.61.1
28/08/2018
    - Added API URL versioning (margaretha)

30/08/2018
   - Added backwards compability for URL versioning (margaretha)
   - Updated API version filter (margaretha)

version 0.61.0
13/08/2018
	- Updated Krill and Koral versions enabling VC caching and referencing (margaretha)
	- Set kustvakt configuration as Krill properties (margaretha)
	
version 0.60.5
09/07/2018
	- Fixed status codes (margaretha)
	- Added KustvaktException for wrapping another exception (margaretha)
	- Removed deprecated codes regarding KustvaktResource (margaretha)
	
version 0.60.4
25/06/2018
	- added the redirect URI property in KustvaktException (margaretha)
	- added openid related status codes (margaretha)

version 0.60.3
30/05/2018
	- added parameter checker for collection (margaretha)
	- updated krill version (margaretha)
	
version 0.60.2
25/04/2018
	- rearranged and cleaned up codes (margaretha)
	- generalized some KustvaktException methods (margaretha)
	- added status codes (margaretha)
	- updated FormRequestWrapper constructor (margaretha)
	- fixed get request null parameter in FormRequestWrapper (margaretha)
	
version 0.60.1
14/03/2018
	- removed AdminHandlerIface (margaretha)
	- removed isSystemAdmin in User class (margaretha)

version 0.60
13/03/2018
	- removed old policy and deprecated code (margaretha)
	- moved authentication related code to /full (margaretha)
	- elaborated default layer names in the configuration file (margaretha)
	- added GROUP_DELETED status code (margaretha)

version 0.59.10 
20/02/2018
	- updated hibernate and reflection versions (margaretha)
	- added Changes file (margaretha)